css/style.scss
/* ... */
a {
	color:$color_black;
	text-decoration:none;
	padding-bottom:0.05rem;
	border-bottom:1px solid $color_black;
	outline:0;
	cursor:cell !important;
	}
a:hover {
	color:$color_black;
	border-bottom-color:$color_black;
	}

p {
	font-size:1em;
	font-weight:normal;
	}

span.i {
	font-style:italic;
	}
span.st {
	text-decoration:line-through;
	}

/* 	------------------------------------
		GENERAL
   	------------------------------------ */

#background {
	position:fixed;
	border-left:$border_size solid $color_black;
	border-right:$border_size solid $color_black;
	border-color:$color_black;
	left:0;
	right:0;
	top:0;
	bottom:0;
	z-index:-1;
	}

.container {
	float:left;
	width:100%;
	margin:0 auto;
	padding:0 calc(1rem * 2);
	clear:both;
	@include box-sizing(border-box);
	}
.container#main {
	opacity:0;
	padding:3rem 0;
	overflow:visible;
	@include transition(opacity 360ms ease);
	}
.container.show#main {
	opacity:1;
	}

.content-wrapper {
	width:100%;
	margin:0 auto;
	padding:4rem $border_size;
	@include box-sizing(border-box);
	}
.content-wrapper.generic-content-wrapper {
	max-width:1000px;
	}
.content-wrapper.full-width-content-wrapper {
	}

.content-wrapper .masthead {
	float:left;
	padding:0 1.5rem;
	}

.content-wrapper .generic-list {
	float:left;
	width:100%;
	padding-bottom:4rem;
	border-top:1px solid $color_lg;
	}
.content-wrapper .generic-list ul {
	float:left;
	width:100%;
	font-size:0.75rem;
	line-height:1.2rem;
	list-style-type:none;
	margin:0;
	padding:0 1.5rem;
	border:none;
	@include box-sizing(border-box);
	}
.content-wrapper .generic-list ul li {
	float:left;
	width:100%;
	height:100%;
	padding-top:0;
	border:none;
	}

.content-wrapper .generic-list ul li .col_left {
	float:left;
	width:90%;
	margin:0;
	padding-right:1rem;
	@include box-sizing(border-box);
	}
.content-wrapper .generic-list ul li .col_right {
	float:right;
	width:10%;
	text-align:right;
	margin:0;	
	}

/* 	------------------------------------
		NAVIGATION
   	------------------------------------ */

#nav {
	width:100%;
	font-size:1rem;
	line-height:1rem;
	letter-spacing:1px;
	}

#nav .home,
#nav .about,
#nav .projects {
	z-index:1001;
	position:fixed;
	top:85px;
	}
#nav .home {
	left:$nav_pos;
	}
#nav .about {
	right:$nav_pos;
	}
#nav .projects {
	z-index:1000;
	right:calc(#{$nav_pos} + 85px);
	margin-top:0;
	}

/* 	------------------------------------
		GALLERY PAGE
   	------------------------------------ */

$gallery_margin:calc(#{$nav_pos}); /* set left and right margins; currently anchoring on nav position */

.container #gallery {
	width:auto;
	max-width:100vw;
	overflow:auto;
	text-align:center;
	margin:0 $gallery_margin;
	padding:4rem 0 0;
	-webkit-transform:translate3d(0, 0, 0);
	@include box-sizing(border-box);
	}

#gallery .list-img-container {
	float:left;
	width:calc(100% / 3);
	height:calc((((100vw - (#{$gallery_margin} * 2)) / 3) * 3) / 2);
	text-align:left;
	text-decoration:none;
	vertical-align:top;
	margin:0 0 100px;
	padding:16px;
	border:none;
	@include box-sizing(border-box);
}
#gallery a.list-img-link {
	}

#gallery a.list-img-link .list-img {
	display:block;
	object-fit:cover;
	width:100%;
	height:100%;
	border-radius:1px;
	}

#gallery a.list-img-link .list-img.blur-load {
	filter:blur(5px);
	transition:filter 0.6s ease, opacity 0.6s ease;
	}
	
#gallery a.list-img-link .list-img.blur-load.loaded {
	filter:none;
	}
#gallery a.list-img-link:hover .list-img {
  @include box-shadow(0 -1px 0 0 rgba(17, 17, 17, 1));
	}

#gallery a.list-img-link .metadata {
	font-size:0.85rem;
	line-height:1.35rem;
	letter-spacing:1px;
	padding-top:0.75rem;
	}

#gallery a.list-img-link .metadata p {
	float:left;
	margin:0;
	padding:0;
	padding-top:0.25rem;
	}
#gallery a.list-img-link:hover .metadata p span {
	padding-bottom:1px;
	border-bottom:1px solid black;
	}

/* 	------------------------------------
		PROJECTS PAGE
   	------------------------------------ */

#projects .masthead {
	float:none;
	text-align:center;
	font-size:0.9rem;
	line-height:1.5rem;
	-webkit-transform: translateZ(0);
	}

#projects .masthead #project-tags {
	display:block;
	text-align:center;
	padding:1rem 1.5rem 4rem;
	border-top:1px solid $color_lg;
	}

#projects .masthead #project-tags .project-tag {
	display:inline-block;
	font-size:0.55rem;
	text-transform:uppercase;
	margin:0 2px 2px 0;
	padding:2px 8px;
	border:1px solid $color_black;
	border-radius:2px;
	cursor:cell;
	-webkit-user-select: none; /* Safari */        
	-moz-user-select: none; /* Firefox */
	-ms-user-select: none; /* IE10+/Edge */
	user-select: none; /* Standard */
	}
#projects .masthead #project-tags .project-tag:hover {
	background:#444 !important;
	color:#fff;
	}
#projects .masthead #project-tags .project-tag.active {
	background:$color_black !important;
	color:#fff;
	}

#projects .generic-list {
	border-top:none;
	}

#projects .generic-list  #project-headers {
	height:1rem;
	}

#projects .generic-list ul {
	line-height:1.15rem !important;
	list-style-type:none !important;
	margin-top:-1px;
	padding:0 3rem;
	}

#projects .generic-list ul li .sorter {
	height:100%;
	}
#projects .generic-list ul li .sorter:hover {
	cursor:cell;
	}
#projects .generic-list ul li .sorter:hover::after {
	color:#ccc;
	content:'⇂';
	vertical-align:top;
	}
#projects .generic-list ul li .sorter.focus.asc::after {
	color:$color_black;
	content:'⇂';
	vertical-align:top;
	}
#projects .generic-list ul li .sorter.focus.desc::after {
	color:$color_black;
	content:'↿';
	vertical-align:top;
	}
#projects .generic-list ul li.null .sorter::after,
#projects .generic-list ul li.null .sorter:hover::after {
	content:"" !important;
	}

#projects .generic-list ul li .col_left {
	width:calc(100% - 125px);
	}
#projects .generic-list ul li .col_right {
	width:125px;
	height:100%;
	}

#projects .generic-list ul li.header .col_right #col_tag {
	float:right;
	width:32px;
	margin-right:1rem;
	}
#projects .generic-list ul li.header .col_right #col_year {
	float:right;
	width:38px;
	}
/* ... */

